# yield-curves

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  quickstart.sh  render.yaml
.github/workflows/: ci.yml
scripts/: get_bund_data.py
settings/admin/: conf.yml
settings/local/: conf.yml
settings/prod/: conf.yml
settings/test/: conf.yml
src/: manage.py
src/apps/accounts/: urls.py  views.py
src/apps/yield_curves/: apps.py  models.py  urls.py  views.py
src/apps/yield_curves/migrations/: 0001_initial.py  0002_bond_issue_volume.py  0003_analysis.py  0004_analysis_is_deleted.py  0005_remove_analysis_country_remove_analysis_date.py  0006_bondscatter_yieldcurve.py  0007_bond_is_green.py  0008_bond_is_indexed.py  0009_remove_analysis_is_deleted.py  0010_remove_bondmetric_isin_alter_bondmetric_pk.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/curve_engine/: curve_engine.py
src/static/css/: base.css
src/static/css/components/: charts.css  scatter-chips.css
src/static/css/pages/: analysis-detail.css  profile.css
src/static/js/components/: chart-manager.js  scatter-manager.js
src/static/js/pages/: analysis-detail.js
src/static/static/: staticfiles.json
src/static/static/static/: staticfiles.35ce9ecec199.json
src/static/static/static/css/: base.16b4770a60fa.16b4770a60fa.css
src/static/static/static/static/: staticfiles.b52530054328.json
src/templates/: base.html  home.html
src/templates/accounts/: login.html  profile.html  signup.html
src/templates/yield_curves/: analyses_list.html  analysis_detail.html  analysis_list.html  analytics.html  create_analysis.html
src/utils/: configuration.py  data.py  db_connector.py  keyval.py
tests/apps/yield_curves/: test_yield_curves.py
tests/curve_engine/: test_curve_engine.py
tests/django/apps/yield_curves/: test_yield_curves.py
tests/django/curve_engine/: test_curve_engine.py
tests/utils/: test_configuration.py  test_data.py
(+13 files in other folders)
