[project]
name = "yield-curves"
version = "0.1.0"
description = "Yield curve analysis app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.1",
    "dotenv>=0.9.9",
    "pyyaml>=6.0.2",
]

[dependency-groups]
tests = [
    "pytest>=8.3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
