[project]
name = "yield-curves"
version = "0.1.0"
description = "Yield curve analysis app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "ruff>=0.11.12",
]

[dependency-groups]
dev = [
    "ipython>=8.36.0",
]
tests = [
    "pytest>=8.3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.ruff]
line-length = 100
lint.ignore = [
    "Q000",
    "D105",
    "EM101",
    "EM102",
    "BLE001",
    "TC003",
    "TRY003",
    "SLOT000",
    "TC002",
    "D101",
    "D102",
    "D103",
    "PLR2004",
    "D107",
    "DTZ011",
    "G004",
]
